updated and cleaned up code + add descriptions

--- a/ML-Food101-FinalProject-Claudia.ipynb
+++ b/ML-Food101-FinalProject-Claudia.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "RG-lsZVmRqQc"
@@ -9,24 +10,31 @@
     "Author: Claudia Gusti\n",
     "Date: 12/3/22\n",
     "\n",
-    "Approaches to Multi Class Food Image Classification\n",
+    "# Approaches to Multi Class Food Image Classification\n",
+    "\n",
+    "### Problem:\n",
+    "As health and well-being become increasingly important, mobile applications for dietary tracking attract much interest. However, these applications often require users to log their meals based on relatively unreliable memory recall, thereby underestimating nutritional intake and, thus, undermining the efforts of nutrition tracking. To accurately record dietary intake, there is an increasing need for image computational methods.\n",
+    "\n",
+    "### Solution: \n",
+    "One possible solution to this problem is to tackle this problem is to build a food recognizer system, where a CNN model could identify different food items in an image and record it in a database containing a listof foods ingested on a particular day. This colab aims to explore different computer vision approaches using SOTA CNN-based models for an automatic food recognizer system. \n",
+    "\n",
+    "In this colab, we will be training and fine tuning 3 different SOTA CNN models: VGG-16, InceptionV3 and Xception on the Food-101 dataset and evaluating their performance on the Food 101 dataset. \n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "MewDGtijR3W2"
    },
    "source": [
-    "# Download and extract Food 101 dataset"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "Making sure we have the right imports "
+    "### Download and extract Food 101 dataset"
    ]
   },
   {
@@ -39,7 +47,6 @@
    "source": [
     "from __future__ import absolute_import, division, print_function\n",
     "\n",
-    "#Necessay tensorflow imports\n",
     "import tensorflow as tf\n",
     "\n",
     "import tensorflow.keras.backend as K\n",
@@ -120,6 +127,15 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Downloading Data"
+   ]
+  },
+  {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "w8woIcFbuTFR"
@@ -137,7 +153,6 @@
    "outputs": [],
    "source": [
     "# Helper function to download and extract data and extract\n",
-    "\n",
     "def get_data():\n",
     "  if \"food-101\" in os.listdir():\n",
     "    print(\"Dataset already exists\")\n",
@@ -491,7 +506,6 @@
    "outputs": [],
    "source": [
     "# Declare some variables\n",
-    "\n",
     "n_classes = 4   #num of output classes\n",
     "img_width, img_height = 224, 224   #Default image size for VGG16 model\n",
     "train_data_dir = '../.keras/content/food-101/train_mini'\n",
@@ -586,7 +600,6 @@
    "outputs": [],
    "source": [
     "# Declare some variables\n",
-    "\n",
     "n_classes = 4   #num of output classes\n",
     "img_width, img_height = 299, 299   #Default image size for Inception and Xception model\n",
     "train_data_dir = '../.keras/content/food-101/train_mini'\n",
@@ -824,20 +837,21 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Fine Tuning InceptionV3"
+    "# Fine Tuning InceptionV3 on all 101 Food Classes"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "0AYwSoWibqjF"
    },
    "source": [
-    "#Fine tuning process for InceptionV3 model all 101 classes\n",
-    " \n",
+    "\n",
     "Fine tuning methodology: \n",
     "1. Freezing all layers learning a classifier on top of it - similar to transfer learning (and using data augmentation)\n",
     "2. Training the last 3 convolutional layers (with data augmentation)\n"
@@ -908,12 +922,13 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "pYaWGi6_6MTh"
    },
    "source": [
-    "##Loading InceptionV3 model\n",
+    "## Loading InceptionV3 model\n",
     "\n",
     "Let's load the InceptionV3 model and attach Fully connected layers on top of it."
    ]
@@ -963,12 +978,13 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "2_hyz2D_8f2G"
    },
    "source": [
-    "##Compile the model and define custom callbacks"
+    "## Compile the model and define custom callbacks"
    ]
   },
   {
@@ -983,7 +999,7 @@
    },
    "outputs": [],
    "source": [
-    "#Compile the model            #Learning rate = 0.001\n",
+    "#Compile the model            \n",
     "model.compile(optimizer=SGD(lr=0.001, momentum=0.9), loss='categorical_crossentropy', metrics=['accuracy'])\n",
     "\n",
     "#Callback for model saving and reducing learning rate on plateau\n",
@@ -1129,11 +1145,8 @@
    "outputs": [],
    "source": [
     "#pipeline for error analysis\n",
-    "\n",
     "# example of loading an image with the Keras API\n",
     "from keras.preprocessing.image import load_img\n",
-    "\n",
-    "\n",
     "predictions = model.predict(validation_generator, steps=validation_generator.samples/validation_generator.batch_size,verbose=1)\n",
     " \n",
     "# Run the function to get the list of classes and errors\n",
@@ -1179,10 +1192,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "Lets choose the layers which are updated by training"
    ]
@@ -1333,11 +1345,14 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
-   "metadata": {
-    "id": "OY9gmhjj3_W_"
-   },
-   "source": []
+   "metadata": {},
+   "source": [
+    "In this project, I proposed a transfer learning approach to transfer the knowledge learned from the source dataset (ImageNet) to our target dataset (Food 101) by attaching a classifier to the InceptionV3 base architecture and fine tuning our model to Food 101 through retraining the weights of certain layers within our model to achieve an overall accuracy of >85% on the Food 101 validation set.  \n",
+    "\n",
+    "In future work, provided GPU resources are available, I want to retrain all the layers on Food 101 training set on our model to further increase accuracy. Further, I also plan to evaluate multi modal classification architectures using Vision and Language models such as ViLT and CLIP [7] that have gained promising results in computer vision applications such as image classification in the past few years.  "
+   ]
   }
  ],
  "metadata": {
